# global-payments-observability-lab

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  alembic.ini  pyproject.toml  sonar-project.properties
.github/workflows/: cd.yml  ci.yml  loadtest-5k-evidence.yml  sonarcloud.yml
alembic/: env.py
alembic/versions/: 20260208_0001_initial_schema.py
docs/: README.md  api-reference.md  control-scenarios.md  getting-started.md  observability.md  operations.md  quality-and-testing.md  roadmap-week2.md
docs/architecture/: patterns.md
docs/evidence/: smoke-tests-2026-02-08.md  smoke-tests.md
infra/docker/: docker-compose.edge.yml  docker-compose.yml
infra/edge/: Dockerfile  nginx.conf
infra/observability/: otel-collector-config.yaml  prometheus-alerts.yml  prometheus.yml
infra/observability/grafana/dashboards/: payments-observability.json
scripts/loadtest/: README.md
scripts/loadtest/k6/: idempotency_collision.js  mixed_rails_traffic.js
services/payments-api/: Dockerfile
services/payments-api/payments_api/: main.py
services/payments-api/payments_api/api/: dependencies.py  routes_payments.py
services/payments-api/payments_api/core/: config.py  error_handlers.py  errors.py  metrics.py
services/payments-api/payments_api/db/: session.py
services/payments-api/payments_api/repositories/: customer_repository.py  idempotency_repository.py  limits_policy_repository.py  outbox_repository.py  payment_repository.py
services/payments-api/payments_api/services/: aml_service.py  idempotency_service.py  kyc_service.py  limits_service.py  rate_limiter_service.py  risk_service.py
services/payments-api/payments_api/use_cases/: create_payment.py  get_payment.py  review_payment.py
services/payments-processor/: Dockerfile
services/payments-processor/payments_processor/: main.py
services/payments-processor/payments_processor/commands/: call_provider.py  finalize_payment.py  mark_processing.py
services/payments-processor/payments_processor/core/: config.py  errors.py  metrics.py
services/payments-processor/payments_processor/db/: session.py
services/payments-processor/payments_processor/event_bus/: __init__.py  contracts.py  factory.py  kafka.py  noop.py  rabbitmq.py
services/payments-processor/payments_processor/providers/: adapter.py  factory.py  strategy.py
services/payments-processor/payments_processor/repositories/: outbox_repository.py  payment_repository.py
services/payments-processor/payments_processor/workers/: outbox_worker.py
services/provider-mock/: Dockerfile
services/provider-mock/provider_mock/: main.py
services/provider-mock/provider_mock/api/: routes_provider.py
services/provider-mock/provider_mock/core/: config.py
shared/: pyproject.toml
shared/constants/: __init__.py  payment_rails.py  redis_keys.py
shared/contracts/: __init__.py  dto.py  enums.py  events.py  persistence.py
shared/logging/: __init__.py  fields.py  logger.py  middleware.py
shared/observability/: __init__.py  attributes.py  otel.py  propagation.py
shared/resilience/: __init__.py  backoff.py  bulkhead.py  circuit_breaker.py  retry.py
shared/utils/: __init__.py  http_security.py  ids.py  validation.py
tests/: conftest.py
tests/helpers/: __init__.py  app.py  app_client.py  assertions.py  factories.py  fakes.py
tests/integration/: test_integration_containers.py
tests/unit/: test_aml_service.py  test_api_db_session.py  test_api_dependencies.py  test_api_error_handlers.py  test_api_main.py  test_api_repositories.py  test_api_routes_payments.py  test_bulkhead.py  test_call_provider_command.py  test_circuit_breaker.py  test_concurrency_idempotency.py  test_create_payment_request_dto.py  test_create_payment_status_resolution.py  test_event_bus_factory.py  test_event_bus_kafka.py  test_finalize_payment_command.py  test_get_payment_use_case.py  test_http_security_helpers.py  test_idempotency_service.py  test_kyc_service.py  test_limits_service.py  test_logger_helpers.py  test_logging_middleware.py  test_logging_redaction.py  test_observability_otel.py  test_observability_propagation.py  test_outbox_logic.py  test_outbox_worker_branches.py  test_payment_rails_constants.py  test_payment_repository.py  test_processor_config.py  test_processor_db_session.py  test_processor_main.py  test_processor_repositories.py  test_provider_adapter.py  test_provider_config.py  test_provider_main.py  test_provider_routes_provider.py  test_provider_simulation_engine.py  test_provider_strategy_factory.py  (+5 more)
(+3 files in other folders)
